--- a/ineuron/dineIn/templates/dineIn/food_menu.html
+++ b/ineuron/dineIn/templates/dineIn/food_menu.html
@@ -23,14 +23,13 @@
         <div class="profiledrop">
       <div class="btn-group" >
           <button type="button" class="btn btn-transparent dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-              
               <img src="{% static 'dineIn/images/user.jpg' %}" alt="profile">
           </button>
           <ul class="dropdown-menu dropdown-menu-end">
-              <li><button class="dropdown-item center" type="button">Username</button></li>
-              <li><button class="dropdown-item center" type="button">Table No.</button></li>
+              <li><button class="dropdown-item center" type="button">{{user.name}}</button></li>
+              <li><button class="dropdown-item center" type="button">Table : {{user.tableNo}}</button></li>
               <li><button class="dropdown-item center" type="button">
-                <form><input type="submit" value="SignOut" class="bordernone center"/></form>
+                <a href="{% url 'delete' user.tableNo %}" class="bordernone center signout">Sign Out</a>
               </button></li>
           </ul>
       </div>
@@ -60,7 +59,7 @@
                       {% endif %}
                       <div class="card__header-text">
                         <h3 class="card__title">{{item.name}}</h3>            
-                        <span class="card__status">{{item.price}}</span>
+                        <span class="card__status">₹{{item.price}}</span>
                       </div>
                       
                     </div>
@@ -75,7 +74,6 @@
               {% endfor %}
           </ul>
       </section>
-      <!-- {{item.name}} -->
 
       <section class="foodsec" id="main_course">
         <div>
@@ -97,15 +95,15 @@
                     {% endif %}
                     <div class="card__header-text">
                       <h3 class="card__title">{{item.name}}</h3>            
-                      <span class="card__status">{{item.price}}</span>
+                      <span class="card__status">₹{{item.price}}</span>
                     </div>
                   </div>
                   <p class="card__description">{{item.description}}</p>
                 </div>
               </a>      
              </li>
-             <div class="d-flex align-items-center quantity mw" style="background-color:#e3d5ca;">  <span class="pe-3"> <input name = {{ item|private:"_id" }} 
-                    class="ps-2" type="checkbox"></span>
+             <div class="d-flex align-items-center quantity mw" style="background-color:#e3d5ca;">  <span class="pe-3"> 
+              <input name = {{ item|private:"_id" }}  class="ps-2 quantityBox" type="number"  min="0" ></span>
             </div>
             </section>
             {% endfor %}
@@ -133,7 +131,7 @@
                     {% endif %}
                     <div class="card__header-text">
                       <h3 class="card__title">{{item.name}}</h3>            
-                      <span class="card__status">{{item.price}}</span>
+                      <span class="card__status">₹{{item.price}}</span>
                     </div>
                     
                   </div>
@@ -141,8 +139,8 @@
                 </div>
               </a>      
              </li>
-             <div class="d-flex align-items-center quantity mw" style="background-color:#e3d5ca;"> <<span class="pe-3"> <input name = {{ item|private:"_id" }}
-                    class="ps-2" type="checkbox"></span>
+             <div class="d-flex align-items-center quantity mw" style="background-color:#e3d5ca;"> <<span class="pe-3"> 
+              <input name = {{ item|private:"_id" }}  class="ps-2 quantityBox" type="number"  min="0" ></span>
             </div>
             </section>
             {% endfor %}
@@ -170,7 +168,7 @@
                     {% endif %}
                     <div class="card__header-text">
                       <h3 class="card__title">{{item.name}}</h3>            
-                      <span class="card__status">{{item.price}}</span>
+                      <span class="card__status">₹{{item.price}}</span>
                     </div>
                     
                   </div>
@@ -178,8 +176,8 @@
                 </div>
               </a>      
              </li>
-             <div class="d-flex align-items-center quantity mw" style="background-color:#e3d5ca;">  <span class="pe-3"> <input name = {{ item|private:"_id" }}
-                    class="ps-2" type="checkbox"></span>
+             <div class="d-flex align-items-center quantity mw" style="background-color:#e3d5ca;">  <span class="pe-3">
+               <input name = {{ item|private:"_id" }}  class="ps-2 quantityBox" type="number"  min="0" ></span>
             </div>
             </section>
             {% endfor %}
@@ -206,7 +204,7 @@
                     {% endif %}
                     <div class="card__header-text">
                       <h3 class="card__title">{{item.name}}</h3>            
-                      <span class="card__status">{{item.price}}</span>
+                      <span class="card__status">₹{{item.price}}</span>
                     </div>
                     
                   </div>
@@ -214,8 +212,8 @@
                 </div>
               </a>      
              </li>
-             <div class="d-flex align-items-center quantity mw" style="background-color:#e3d5ca;"> <span class="pe-3"> <input name = {{ item|private:"_id" }}
-                    class="ps-2" type="checkbox"></span>
+             <div class="d-flex align-items-center quantity mw" style="background-color:#e3d5ca;"> <span class="pe-3"> 
+              <input name = {{ item|private:"_id" }}  class="ps-2 quantityBox" type="number"  min="0" ></span>
             </div>
             </section>
             {% endfor %}
@@ -243,7 +241,7 @@
                     {% endif %}
                     <div class="card__header-text">
                       <h3 class="card__title">{{item.name}}</h3>            
-                      <span class="card__status">{{item.price}}</span>
+                      <span class="card__status">₹{{item.price}}</span>
                     </div>
                     
                   </div>
@@ -251,8 +249,8 @@
                 </div>
               </a>      
              </li>
-             <div class="d-flex align-items-center quantity mw" style="background-color:#e3d5ca;"> <span class="pe-3"> <input name = {{ item|private:"_id" }}
-                    class="ps-2" type="checkbox"></span>
+             <div class="d-flex align-items-center quantity mw" style="background-color:#e3d5ca;"> <span class="pe-3"> 
+              <input name = {{ item|private:"_id" }}  class="ps-2 quantityBox" type="number"  min="0" ></span>
             </div>
             </section>
             {% endfor %}
@@ -279,7 +277,7 @@
                     {% endif %}
                     <div class="card__header-text">
                       <h3 class="card__title">{{item.name}}</h3>            
-                      <span class="card__status">{{item.price}}</span>
+                      <span class="card__status">₹{{item.price}}</span>
                     </div>
                     
                   </div>
@@ -287,16 +285,13 @@
                 </div>
               </a>      
              </li>
-             <div class="d-flex align-items-center quantity mw" style="background-color:#e3d5ca;"><span class="pe-3"> <input name = {{ item|private:"_id" }}py
-                    class="ps-2" type="checkbox"></span>
+             <div class="d-flex align-items-center quantity mw" style="background-color:#e3d5ca;"><span class="pe-3">
+               <input name = {{ item|private:"_id" }}  class="ps-2 quantityBox" type="number"  min="0" ></span>
             </div>
             </section>
             {% endfor %}
         </ul>
       </section>
-
-
-           <!-- golden------------------------------------- -->
 
     
 
@@ -308,25 +303,25 @@
       </button>
 
       <div class="dropup-content">
-        <a href="{% url 'food_menu' user.tableNo %}#drinks">
+        <a href="{% url 'food_menu' id=user.tableNo otp=user.otp user_id=user|private:'_id' %}#drinks">
           DRINKS
         </a>
-        <a href="{% url 'food_menu' user.tableNo %}#burger">
+        <a href="{% url 'food_menu' id=user.tableNo otp=user.otp user_id=user|private:'_id' %}#burger">
           BURGERS
         </a>
-        <a href="{% url 'food_menu' user.tableNo %}#pizza">
+        <a href="{% url 'food_menu' id=user.tableNo otp=user.otp user_id=user|private:'_id' %}#pizza">
           PIZZAS
         </a>
-        <a href="{% url 'food_menu' user.tableNo %}#combo">
+        <a href="{% url 'food_menu' id=user.tableNo otp=user.otp user_id=user|private:'_id' %}#combo">
           COMBOS
         </a>
-        <a href="{% url 'food_menu' user.tableNo %}#deserts">
+        <a href="{% url 'food_menu' id=user.tableNo otp=user.otp user_id=user|private:'_id' %}#deserts">
           DESSERTS
         </a>
-        <a href="{% url 'food_menu' user.tableNo %}#main_course">
+        <a href="{% url 'food_menu' id=user.tableNo otp=user.otp user_id=user|private:'_id' %}#main_course">
           MAIN COURSE
         </a>
-        <a href="{% url 'food_menu' user.tableNo %}#starters">
+        <a href="{% url 'food_menu' id=user.tableNo otp=user.otp user_id=user|private:'_id' %}#starters">
           STARTERS
         </a>
       </div>
@@ -337,7 +332,6 @@
                  <a href="#" onclick="myFunction()">
                     <img src="{% static 'dineIn/images/cart.png' %}" alt="cart">
                  </a>
-                 <!-- <input type="submit" value="Cart" > -->
                 </form>
             </div>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
